--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "start": "craco start",
     "build": "craco build",
-    "test": "react-scripts test",
+    "test": "npx jest src",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -46,6 +46,14 @@
     ]
   },
   "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "jsdom",
+    "testPathIgnorePatterns": [
+      "/node_modules/"
+    ],
+    "transformIgnorePatterns": [
+      "/node_modules/"
+    ],
     "moduleNameMapper": {
       "^@Components/(.*)$": "<rootDir>/src/components/shared/$1",
       "^@Config/(.*)$": "<rootDir>/src/config/$1",
@@ -57,6 +65,8 @@
   },
   "devDependencies": {
     "@craco/craco": "^7.1.0",
+    "@types/jest": "^29.5.14",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.6.3",
     "webpack": "^5.96.1"
   }
