--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.11.5",
-    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
@@ -47,6 +46,9 @@
   },
   "jest": {
     "preset": "ts-jest",
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/setupTests.ts"
+    ],
     "testEnvironment": "jsdom",
     "testPathIgnorePatterns": [
       "/node_modules/"
@@ -60,12 +62,15 @@
       "^@Utils/(.*)$": "<rootDir>/src/components/shared/utils/$1",
       "^@Modules/(.*)$": "<rootDir>/src/components/modules/$1",
       "^@Api/(.*)$": "<rootDir>/src/api/$1",
-      "^@Hooks/(.*)$": "<rootDir>/src/hooks/$1"
+      "^@Hooks/(.*)$": "<rootDir>/src/hooks/$1",
+      "\\.(scss|sass|css)$": "identity-obj-proxy"
     }
   },
   "devDependencies": {
     "@craco/craco": "^7.1.0",
+    "@testing-library/jest-dom": "^5.17.0",
     "@types/jest": "^29.5.14",
+    "identity-obj-proxy": "^3.0.0",
     "ts-jest": "^29.2.5",
     "typescript": "^5.6.3",
     "webpack": "^5.96.1"
